# gke-finops-dashboard

./: LICENSE  README.md  pyproject.toml
src/: cli.py  gcp_client.py  gcp_cost_processor.py  main.py  types.py
